--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/dooq
 JWT_SECRET=your_super_secret_key_change_this
+EMAIL_USER=ganeshnayak8175@gmail.com
+EMAIL_PASSWORD=mmydoptzrkqmrkzs
