--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ EMAIL_PASSWORD=mmydoptzrkqmrkzs
 CLOUDINARY_CLOUD_NAME=dahotkqpi
 CLOUDINARY_API_KEY=895583391845898
 CLOUDINARY_API_SECRET=X6EQnNOe75zlvQBAQEgeDNt-DLA
+APP_SCHEME=dooq
