--- a/dooq/package.json
+++ b/dooq/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.3",
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "expo": "52.0.33",
